--- a/style.css
+++ b/style.css
@@ -26,8 +26,6 @@
     overflow: hidden;
 }
 
-
-
 #reveal-text-up .word{
     transform: translateY(35px);  
     transition: transform .3s;
@@ -69,3 +67,15 @@
     height: 100%;
     object-fit: cover;
   }
+
+
+   .acc_active {
+    grid-template-rows: 1fr;
+   }
+
+   .clipPath {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+   }
+
+ 
+  
